# Fast-Api-python

./: .env.dev  .gitignore  Learning_Db.docx  Local_fastAPI.postman_collection.json  Notes.txt  README.md  Rect_UI.docx  User_management.docx  db_notes.txt  pyproject.toml  requirements.txt
app/: .env  config.py  database.py  dbConn.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py
